tests/invalid/Assign_Invalid_4.whiley
import * from whiley.lang.*

function f() -> int:
    return true
